tests/fixtures/invalid/none_rshift_set.py
# Cannot right shift None and Set[int]
x: None = None >> {1, 2, 3}
